--- a/index.html
+++ b/index.html
@@ -19,11 +19,11 @@
         <span>G</span>
     </div>
     <div class="description">
-        <span>Sa ada hadiah spesial buat Sayangg!!</span>
+        <span>Selamat ulang tahun Sayanggkuu!! ini hadiah buat Sayanggg</span>
     </div>
     <div class="button">
         <button>
-            <a href="flower.html">Klik disini</a>
+            <a href="flower.html">Klik disini ya</a>
         </button>
         
     </div>
